Fix method names for get all (#23)
* Fix method names for get all

* Fixing method names for tests
